--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,5 @@ python:
   - "3.4"
 install:
   - pip install -r requirements.txt
-# command to run tests
 script:
-  - pytest tests.py
+  - pytest tests.py -s
